	PR target/40577 	* config/alpha/alpha.c (alpha_expand_unaligned_store): Convert src 	to DImode when generating insq_le insn.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@150198 138bc75d-0d04-0410-961f-82ee72b054a4